[metadata]
name = makepackage
version = 0.2.0
author = Nyggus
author_email = nyggus@gmail.com
description = Creating a structure of a simple Python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nyggus/makepackage
license_files = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    makepackage
python_requires = >=3.6
install_requires = 
    easycheck

[options.entry_points]
console_scripts = 
    makepackage = makepackage.__main__:main

[options.extras_require]
dev = 
    wheel
    black
    pytest
    mypy


